Fixed the buttons on smaller screen sizes

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -21,6 +21,7 @@ header {
     color: var(--app-color-primary);
     text-decoration: none;
   }
+
   .enroll-now {
     color: #fff;
     background-color: #900;
@@ -44,8 +45,7 @@ header {
   }
 
   .uni-name {
-    margin-left: 15px;
-
+    margin-left: 8px;
     a {
       font-size: 2.5rem;
       font-family: "Times New Roman", Times, serif;
@@ -56,12 +56,10 @@ header {
     ul {
       li {
         display: inline;
-
         a {
           font-size: 1.8rem;
           font-weight: 400;
         }
-
         a:hover {
           text-decoration: underline;
         }
@@ -89,13 +87,11 @@ header {
     display: none;
   }
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 900px) {
     nav ul {
       display: none;
-
       li {
         margin: 10px 0;
-
         a {
           padding: 10px 20px;
           text-decoration: none;
@@ -113,7 +109,6 @@ header {
       right: 0;
       display: block;
       cursor: pointer;
-
       i {
         font-size: 24px;
       }
@@ -140,6 +135,7 @@ header {
 
     .uni-name a {
       font-size: 2.1rem;
+      margin-left: 0;
     }
 
     .crest {
@@ -547,6 +543,7 @@ footer {
     color: #900;
     font-family: 500;
     padding: 8px 40px;
+    border-radius: var(--app-box-radius);
     background-color: #fff;
   }
 
