--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -45,8 +45,7 @@ header {
   }
 
   .uni-name {
-    margin-left: 15px;
-
+    margin-left: 8px;
     a {
       font-size: 2.5rem;
       font-family: "Times New Roman", Times, serif;
@@ -57,12 +56,10 @@ header {
     ul {
       li {
         display: inline;
-
         a {
           font-size: 1.8rem;
           font-weight: 400;
         }
-
         a:hover {
           text-decoration: underline;
         }
@@ -90,13 +87,11 @@ header {
     display: none;
   }
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 900px) {
     nav ul {
       display: none;
-
       li {
         margin: 10px 0;
-
         a {
           padding: 10px 20px;
           text-decoration: none;
@@ -114,7 +109,6 @@ header {
       right: 0;
       display: block;
       cursor: pointer;
-
       i {
         font-size: 24px;
       }
@@ -141,6 +135,7 @@ header {
 
     .uni-name a {
       font-size: 2.1rem;
+      margin-left: 0;
     }
 
     .crest {
@@ -148,7 +143,6 @@ header {
     }
   }
 }
-
 /*--------------------------------*/
 /* Mini Banner                    */
 /*--------------------------------*/
@@ -451,6 +445,7 @@ footer {
     font-family: 500;
     padding: 8px 40px;
     background-color: #fff;
+    border-radius: var(--app-box-radius);
   }
 
   @media screen and (max-width: 900px) {
